<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressureName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heightName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        
        <TableRow
            android:id="@+id/climbSinkRateTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/climbSinkRateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climbSinkRateName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/climbSinkRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/noiseLowerBound"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/noiseLowerBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/sinkRateSignaling" />

        <TextView
            android:id="@+id/sinkRateSignaling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="1.5 m/s"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/noiseUpperBound"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    	<SeekBar
	        android:id="@+id/noiseUpperBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/climbRateSignaling" />
    
            <TextView
            android:id="@+id/climbRateSignaling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="1.5 m/s"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	</RelativeLayout>
            
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startName" />

</LinearLayout>
